Fix round result spacing

--- a/style.css
+++ b/style.css
@@ -32,13 +32,14 @@ main {
 }
 
 .container {
+    width: 900px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     gap: 10px;
-    padding: 60px 150px;
+    padding: 60px 0px;
     background-color: var(--mainColor);
     border-radius: 20px;
 }
@@ -84,7 +85,7 @@ button:active {
 }
 
 .score {
-    width: 100%;
+    width: 50%;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
@@ -99,6 +100,7 @@ button:active {
 }
 
 .roundResult {
+    padding: 20px;
     font-size: 35px;
     color: var(--fontColor);
 }
